fixed spacing for h2/h3

--- a/static/inbox.css
+++ b/static/inbox.css
@@ -455,7 +455,7 @@ body {
     font-size: 1.3rem;
     font-weight: bold;
     margin-bottom: -2rem;
-    margin-right: 1.3rem;
+    margin-right: 1.5rem;
 }
 
 .quick-action-btn,
